moto-bot/guild-banner-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guild-banner

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: guild-banner
  template:
    metadata:
      labels:
        app: guild-banner
    spec:
      containers:
        - name: guild-banner
          image: ghcr.io/motoki317/wynn-guild-banner:master@sha256:9668572b4e35cf8dbf5700a2b0f3adf7835ae723412e1f9397a8d2fb9c1d6666
          ports:
            - containerPort: 3000
              name: http
