moto-bot/stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: moto-bot

spec:
  serviceName: moto-bot
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app: moto-bot
  template:
    metadata:
      labels:
        app: moto-bot
    spec:
      enableServiceLinks: false
      containers:
        - name: moto-bot
          image: ghcr.io/motoki317/moto-bot:master
          ports:
            - containerPort: 8080
              name: metrics
