moto-bot/guild-banner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guild-banner

spec:
  type: ClusterIP
  ports:
    - targetPort: http
      name: http
      port: 80
  selector:
    app: guild-banner
