moto-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moto-bot

spec:
  type: ClusterIP
  ports:
    - port: 80
      name: metrics
      targetPort: metrics
  selector:
    app: moto-bot
