moto-bot/guild-banner-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guild-banner

spec:
  entryPoints:
    - websecure
  tls:
    secretName: guild-banner-tls
  routes:
    - kind: Rule
      match: Host(`wynn-guild-banner.toki317.dev`)
      services:
        - namespace: moto-bot
          kind: Service
          name: guild-banner
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
